implementacion de la variable de entorno secret_key

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGO_URI=mongodb+srv://root:root@cluster0.bjtozbt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0;
+JWT_SECRET=a9f@Kp#7$V*lmRz2!6fGxJ0hNwTqY4Sb
