--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 node_modules/
 package-lock.json
-package.jsonnode_modules/
-backend/node_modules
+package.json
+backend/node_modules/
 backend/package-lock.json
 backend/package.json
 uploads/
